<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_image">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/wishList"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|end"
            android:contentDescription="@string/myWishList"
            android:src="@drawable/bookmark_unselected" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/images"
            android:src="@drawable/home" />

        <TextView
            style="@style/font_style_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/name" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/font_style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no" />

            <TextView
                style="@style/font_style_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/mobile_no" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/font_style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <TextView
                style="@style/font_style_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <TextView
                style="@style/font_style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <TextView
                style="@style/font_style_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/price" />


        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/font_style_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />
            <TextView
                style="@style/font_style_white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/address" />


        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bedrooms_status" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/digit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bathrooms" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/digit" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/available_for" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/boys" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/available_From" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/veg_status" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/not_allowed" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol_status" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/allowed" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carParking_status" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/available" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/furnished_status" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/unfurnished" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facing" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/north_east" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/for_" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/mortgage" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property_type" />

                <TextView
                    style="@style/font_style_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/flat" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/font_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating" />

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    android:max="5"
                    android:numStars="5"
                    android:rating="4"
                    android:scrollbarSize="5dp"
                    android:stepSize="0.1" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/font_style_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distance" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/font_style_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/Description" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            style="@style/font_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/report" />
    </LinearLayout>
</ScrollView>